Added some files

--- a/06-DataStorage/datastorage.html
+++ b/06-DataStorage/datastorage.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     
+    <script>
+        localStorage.setItem("name", "Hubert");
+        localStorage.setItem("surname", "Kurek");
+    </script>
 </body>
 </html>
