--- a/07-DataTransfer/filelist.html
+++ b/07-DataTransfer/filelist.html
@@ -1,4 +1,4 @@
-<table style="width:80%">
+<table class='table' style="width:80%">
 <tr><th>#</th><th>FILE NAME</th><th>DATE</th><th>FILE SIZE</th></tr>
 <tr><td>1</td><td>EtCommodo.mp3</td><td>2016-05-09</td><td>315 kB</td></tr>
 <tr><td>2</td><td>Dui.xls</td><td>2016-09-11</td><td>73 kB</td></tr>
