--- a/07-DataTransfer/myfilm.html
+++ b/07-DataTransfer/myfilm.html
@@ -8,9 +8,9 @@
 		<h1>My favourite film</h1>
 		<p></p>
 		
+		<script src='jquery-3.1.1.min.js'></script>
 		<script>
-			// a JavaScript code here ...
-			
+			$('p').load('http://v-ie.uek.krakow.pl/~s187127/one/myfile.txt');
 		</script>
 	</body>
 </html>
