--- a/07-DataTransfer/files.html
+++ b/07-DataTransfer/files.html
@@ -3,14 +3,17 @@
 	<head>
 		<title>My files</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
-		<h1>My files</h1>
-		<div></div>
+		<div class='container'>
+			<h1>My files</h1>
+			<div class="list"></div>
+		</div>
 		
+		<script src='jquery-3.1.1.min.js'></script>
 		<script>
-			// a JavaScript code here ...
-			
+			$('.list').load('http://v-ie.uek.krakow.pl/~s187127/one/filelist.html');
 		</script>
 	</body>
 </html>
