--- a/07-DataTransfer/poland.html
+++ b/07-DataTransfer/poland.html
@@ -14,9 +14,15 @@
 		<h1>Countries bordering</h1>
 		<p></p>
 
+		<script src='jquery-3.1.1.min.js'></script>
 		<script>
-			// a JavaScript code here ...
-			
+			$.getJSON('poland.json', function(data) {
+				console.log(data);
+				let p = document.querySelectorAll('p');
+				p[0].innerText = data.name.official;
+				p[1].innerText = data.capital;
+				p[2].innerText = data.borders.toString();
+			});
 		</script>
 	</body>
 </html>
