--- a/08-SinglePageApp/currency.html
+++ b/08-SinglePageApp/currency.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Currency Exchange Table</title>
-		<meta charset="UTF-8">
-		<script src="model.js"></script>
-		<script src="view.js"></script>
-		<script src="controller.js"></script>
-	</head>
-	<body onload="controller.updateView()">
-		<h1>Currency Exchange Table</h1>
-		<!-- list of currency exchange rates -->
-		<div id="dataview"></div>
-		<hr><!-- form to add new currency -->
-		<h3>Add new currency</h3>
-		<p>Currency code (e.g. EUR):<br>	
-		<input type="text" id="code" maxlength="3" ></p>
-		<p>Exchange rate (e.g. 4.02):<br>
-		<input type="text" id="rate" maxlength="4"></p>
-		<p>Currency name (e.g. Euro):<br>
-		<input type="text" id="name" maxlength="15"></p>
-		<input type="button" value="Add new currency" onclick="view.addCurrency()">
-	</body>
+<head>
+	<title>Currency Exchange Table</title>
+	<meta charset="UTF-8">
+	<script src="model.js"></script>
+	<script src="view.js"></script>
+	<script src="controller.js"></script>
+</head>
+<body onload="controller.updateView()">
+	<h1>Currency Exchange Table</h1>
+	<div id="dataview"></div>
+	<hr>
+	<h3>Add new currency</h3>
+	
+	<p>
+		Currency code (e.g. EUR):<br>
+		<select name="curCode" id="curCode">
+			<option value="EUR">EUR</option>
+			<option value="USD">USD</option>
+			<option value="GBP">GBP</option>
+			<option value="CHF">CHF</option>
+			<option value="CZK">CZK</option>
+			<option value="HRK">HRK</option>
+			<option value="HUF">HUF</option>
+		</select>
+	</p>
+
+	<p>
+		Exchange rate (e.g. 4.02):<br>
+		<input type="text" id="rate" maxlength="4">
+	</p>
+
+	<p>
+		Currency name (e.g. Euro):<br>
+		<select name="curName" id="curName">
+			<option value="Euro">Euro</option>
+			<option value="US Dollar">US Dollar</option>
+			<option value="British Pound">British Pound</option>
+			<option value="Franc">Franc</option>
+			<option value="Czech koruna">Czech koruna</option>
+			<option value="Kuna">Kuna</option>
+			<option value="Hungarian forint">Hungarian forint</option>
+		</select>
+	</p>
+
+	<input type="button" value="Add new currency" onclick="view.addCurrency()">
+</body>
 </html>
